<resources>
    <string name="app_name">ArtisanaTn</string>
    <string name="register_activity_label">Register</string>
    <string name="login_activity_label">Login</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard_buyer">Dashboard buyer</string>
    <string name="title_dashboard_partner">Dashboard partner</string>
    <string name="login">Login</string>
    <string name="title_notifications">Notifications</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="save">save</string>
    <string name="add_artisanat">add artisanat</string>
    <string name="description">Description</string>
    <string name="categorie">Categorie</string>
    <string-array name="roles_array">
        <item>Partner</item>
        <item>Buyer</item>
    </string-array>
</resources>